--- a/tests/schema/fail/invalid-components-and-tags.yaml
+++ b/tests/schema/fail/invalid-components-and-tags.yaml
@@ -1,4 +1,4 @@
-openapi: 3.2.0
+openapi: 3.1.0
 info:
   title: API
   version: 1.0.0
@@ -99,6 +99,7 @@ components:
         type: string
       style: invalid
       allowEmptyValue: yes
+      allowReserved: no
     invalid-cookie:
       name: id
       in: cookie
