--- a/tests/schema/fail/path-item-object-conflicting-additional-operation.yaml
+++ b/tests/schema/fail/path-item-object-conflicting-additional-operation.yaml
@@ -4,62 +4,6 @@ info:
   version: 1.0.0
 paths:
   /pets/{id}:
-    get:
-      description: Returns pets based on ID
-      summary: Find pets by ID
-      operationId: getPetsById
-      responses:
-        '200':
-          description: pet response
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Pet'
-        default:
-          description: error payload
-          content:
-            text/html:
-              schema:
-                $ref: '#/components/schemas/ErrorModel'
-          unexpected: true
-    parameters:
-      - name: id
-        in: path
-        description: ID of pet to use
-        required: true
-        schema:
-          type: array
-          items:
-            type: string
-        style: simple
     additionalOperations:
       POST:
-        description: Returns pets based on ID
-        summary: Find pets by ID
-        operationId: postPetsById
-        requestBody:
-          description: ID of pet to use
-          required: true
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: string
-        responses:
-          '200':
-            description: pet response
-            content:
-              '*/*':
-                schema:
-                  type: array
-                  items:
-                    $ref: '#/components/schemas/Pet'
-          default:
-            description: error payload
-            content:
-              text/html:
-                schema:
-                  $ref: '#/components/schemas/ErrorModel'
+        description: not allowed, use `post` next to `additionalOperations`
